[package]
name = "network_device_logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
rusqlite = {version = "0.30.0", features = ["bundled", "chrono"]}
serde = {version = "1.0.196", features = ["derive"]}
serde_json = "1.0"
