[package]
name = "network_device_logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
chrono = "0.4.33"
dotenv = "0.15.0"
env_logger = "0.11.1"
log = "0.4.20"
rlua = "0.19.8"
rtshark = "2.7.1"
rusqlite = {version = "0.30.0", features = ["bundled", "chrono"]}
serde = {version = "1.0.196", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1.35.1", features = ["full"] }
